--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -13,67 +13,67 @@
     </div>
 </div>
 
+
 <div class="content-container">
-    <div class="content-block-medium">
-      <h2>Our Approach.</h2>
-      <h4 class="grey">Client Involved, Personalized Production.</h4>
-      <div class="content-row">
-        <div class="content-column-half">
-          <img src="{% static 'website/code.png' %}" class="content-image content-image-center">
-          <h4 class="center">Prototyping Stage</h4>
-          <p>We work together with the client going over abstract design goals.  Creating models, and drafts of the product.</p>
-        </div>
-        <div class="content-column-half">
-          <img class="content-image content-image-center">
-          <h4 class="center">Development Stage</h4>
-          <p>After our team has a clear idea of what needs to be built, we get to work designing and constructing the project.</p>
-        </div>
+  <div class="content-block-medium">
+    <h2>Our Approach.</h2>
+    <h4 class="grey">Client Involved, Personalized Production.</h4>
+      <div class="content-column-half">
+        <img src="{% static 'website/build.png' %}" class="content-image content-image-center">
+        <h4 class="center">Prototyping Stage</h4>
+        <p>We work together with the client going over abstract design goals, creating models and drafts of the product.</p>
       </div>
-      <div class="content-row">
-        <div class="content-column-half">
-          <img src="{% static 'website/code.png' %}" class="content-image content-image-center">
-          <h4 class="center">Finalizing Design</h4>
-          <p>When the product is finished, we work with the client to put an final touches,
-            and assure that it is up to the necessary standards before deployment.</p>
-        </div>
-        <div class="content-column-half">
-          <img class="content-image content-image-center">
-          <h4 class="center">Ex-Post Review</h4>
-          <p>Even after everything is completed, the team is available for as long as necessary
-            to be sure that our product is funcitoning correctly and serving its purpose.</p>
-        </div>
+      <div class="content-column-half">
+        <img src="{% static 'website/edit.png' %}"class="content-image content-image-center">
+        <h4 class="center">Development Stage</h4>
+        <p>After our team has a clear idea of what needs to be built, we get to work designing and constructing the project.</p>
+      </div>
+      <div class="content-column-half">
+        <img src="{% static 'website/cycle.png' %}" class="content-image content-image-center">
+        <h4 class="center">Finalizing Design</h4>
+        <p>When the product is finished, we work with the client to put on the final touches
+          and assure that it is up to the necessary standards before deployment.</p>
+      </div>
+      <div class="content-column-half">
+        <img src="{% static 'website/review.png' %}" class="content-image content-image-center">
+        <h4 class="center">Ex-Post Review</h4>
+        <p>Even after everything is completed, the team is available for as long as necessary
+          to be sure that our product is funcitoning correctly and serving its purpose.</p>
       </div>
     </div>
-</div>
+  </div>
+<div class="divider"></div>
 <div class="content-container">
-    <div class="content-block-medium">
-        <h2>Meet the Team.</h2>
-        <br><br><br>
-        <div class="profile-row">
-            <div class="profile-pic"></div>
-            <div class="profile-content">
-                <h3 class="profile-name">Conner Chyung, PhD. Everything</h3>
-                <p>Hello this is a test paragrpah that is supposed to say some meaningful stuff about people that work at our company.
-                But instead it just says this sentence.
-                </p>
-            </div>
-        </div>
+  <div class="content-block-medium">
+    <h2>Meet the Team.</h2>
+    <div class="content-row">
+      <img class="profile-pic" src="{% static 'website/conner.png' %}">
+      <div class="profile-content">
+        <h3 class="profile-name">Conner Chyung, Co-Founder, Project Manager</h3>
+        <p class="grey">Specializing in project management and front-end development, Conner deals with taking on new clients and deploying
+          the final product for the client.  In his free time Conner likes to spend time in the outdoors, go fishing, camping,
+          as well as playing music.
+          <br>
+          <br>
+          Conner is a senior at Kent Denver High School.
+        </p>
+      </div>
     </div>
-    <div class="divider"></div>
-    <div class="content-block-medium">
-         <div class="profile-row">
-            <div class="profile-pic profile-pic-right"></div>
-            <div class="profile-content">
-                <h3 class="profile-name">Drew Parsons, PhD. Everything</h3>
-                <p>Hello this is another test paragraph to test some other stuff lol.  Here are more words
-                    to fill space up and make it look like it would when we finally figure out what we want
-                    to say here.
-
-                </p>
-            </div>
-        </div>
+    <div class="content-row">
+      <img class="profile-pic" src="{% static 'website/drew.png' %}">
+      <div class="profile-content">
+          <h3 class="profile-name">Drew Parsons, Co-Founder, Back-End Developer</h3>
+          <p class="grey">Drew is responsible for managing databasing and Javascript functions within the Absolute Design websites.
+            Prior to founding Absolute Design, Drew interned at several boulder startups including Wild Goose Imaging, and
+            View Into the Blue, where he acquired Python and Javascript knowledge as well as important project management skills.
+            In his free time, Drew plays video games and tennis.
+            <br>
+            <br>
+            Drew is a senior at Kent Denver High School.
+          </p>
+      </div>
     </div>
-
+  </div>
 </div>
 
 {% endblock content %}
